syntax = "proto3";

option java_package = "org.orosoft.login";
option java_multiple_files = true;

message LoginRequest{
  string userId = 1;
  string device = 2;
}

message LoginResponse{
  bool isLoggedIn = 1;
}

service LoginService{
  rpc getLoginStatus(LoginRequest) returns (LoginResponse);
}